# huawei-pc-manager-bootstrap

./: Cargo.toml  README.md  build-dev.bat  build-release.bat  build.bat  version.exports
.github/workflows/: rust.yml
src/: app.rs  common.rs  communication.rs  lib.rs  main.rs
